fix overflow take in account space

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,6 +21,7 @@ min-width: 8em;
 .no_overflow {
 	text-overflow: ellipsis;
 	overflow: hidden;
+    white-space: nowrap;
 }
 .hide_it {
     display: none;
